change background color. change normal callout color. fix image causing slightly small offset on mobile devices.

--- a/src/app/(blog)/posts/[slug]/styles.module.scss
+++ b/src/app/(blog)/posts/[slug]/styles.module.scss
@@ -124,7 +124,9 @@
       width: 100%;
 
       &:global(.highlighted) {
-        background-color: palette.$gray;
+        background-color: palette.$dark-gray;
+
+        border-radius: value.$border-radius;
       }
     }
   }
