--- a/src/components/blog/NavigationBar/styles.module.scss
+++ b/src/components/blog/NavigationBar/styles.module.scss
@@ -12,7 +12,7 @@
 
   width: 100%;
 
-  padding: value.$safe-small-padding;
+  padding: value.$safe-padding;
 }
 
 .container {
