--- a/src/components/blog/mdx/MDXImage/styles.module.scss
+++ b/src/components/blog/mdx/MDXImage/styles.module.scss
@@ -2,15 +2,12 @@
 @use '@/styles/blog/value' as value;
 
 .container {
-  transform: translateX(calc(-1 * value.$safe-padding));
-
   display: flex;
   justify-content: center;
 
-  width: calc(100% + 2 * value.$safe-padding);
+  width: 100%;
 
   margin: value.$content-gap 0;
-  padding: 0 value.$safe-small-padding;
 }
 
 .image-container {
