--- a/src/styles/blog/_palette.scss
+++ b/src/styles/blog/_palette.scss
@@ -1,11 +1,11 @@
 @use 'sass:color';
 
 // Basic colors
-$white: hsl(0, 0%, 82%);
-$gray: hsl(0, 0%, 55%);
-$dark-gray: hsl(0, 0%, 15%);
-$darker-gray: hsl(0, 0%, 5%);
-$black: hsl(0, 0%, 0%);
+$white: hsl(30, 23%, 88%);
+$gray: hsl(30, 13%, 50%);
+$dark-gray: hsl(30, 23%, 16%);
+$darker-gray: hsl(30, 23%, 7%);
+$black: hsl(30, 23%, 4%);
 
 // Colors
 $green: hsl(84, 20%, 49%);
@@ -22,7 +22,7 @@ $link-color: $mint;
 
 $border-color: $dark-gray;
 
-$accent-color: $green;
+$accent-color: $orange;
 $background-color: $black;
 $text-color: $white;
 
